<resources>
    <string name="app_name">SecondApplication</string>
    <string name="name">Muhannad Khatib</string>
    <string name="hintHobbies">Enter Hobbies</string>
    <string name="add">Add</string>
    <string name="bio">Mark Levy is the founder of Levy Innovation, a marketing strategy firm. David Meerman Scott has called him “a positioning guru extraordinaire,” and Debbie Weil referred to him as “a horse whisperer for writers and business thinkers.” He has written for The New York Times, and has written or co-created five books. His latest is a revised, expanded, and re-subtitled edition of his bestseller, Accidental Genius: Using Writing to Generate Your Best Ideas, Insight, and Content. Mark also creates magic tricks and shows. His work has been performed Off-Broadway, in Las Vegas, and on all the major television networks. Visit him and read his blog at levyinnovation.com. His latest is a revised, expanded, and re-subtitled edition of his bestseller, Accidental Genius: Using Writing to Generate Your Best Ideas, Insight, and Content. Mark also creates magic tricks and shows. His work has been performed Off-Broadway, in Las Vegas, and on all the major television networks. Visit him and read his blog at levyinnovation.com.</string>
    <string name="Hobbies">ff</string>
</resources>