<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1EF7D"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView"
        style="@style/textViewStyle"
        android:text="@string/name" />

    <EditText
        android:id="@+id/edtHobbies"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:hint="@string/hintHobbies"
        android:inputType="text" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/add"
        />

    <TextView
        android:id="@+id/txtHobbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textViewStyle"
        android:text="@string/Hobbies"
        android:visibility="gone"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.8"
            android:padding="10dp"
            android:text="@string/bio"
            android:textSize="16sp"
            android:textStyle="bold"
            />

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>